[package]
name = "kvs"
version = "0.1.0"
authors = ["qw4990 <qw4990@163.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
serde = "1.0.92"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
float-cmp = "=0.4.0" # FIXME: https://github.com/assert-rs/predicates-rs/issues/78
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"